--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,65 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+<ion-header [translucent]="true" class="ion-no-border">
+  <ion-toolbar color="dark">
+    <ion-title> Tab 2 </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content [fullscreen]="true" color="light">
+  <div class="main-header"></div>
+  <!-- Résulat -->
+  <ion-card class="">
+    
+      <ion-grid>
+        <ion-row>
+          <ion-col>Code</ion-col>
+          <ion-col>SMS</ion-col>
+          <ion-col>Appels</ion-col>
+          <ion-col>Data</ion-col>
+          <ion-col>Prix</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>#</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>3 GB</ion-col>
+          <ion-col>500</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>#</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>3 GB</ion-col>
+          <ion-col>500</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>#</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>3 GB</ion-col>
+          <ion-col>500</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>#</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>3 GB</ion-col>
+          <ion-col>500</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>#</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>3 GB</ion-col>
+          <ion-col>500</ion-col>
+        </ion-row>
+        <ion-row>
+          <ion-col>#</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>0</ion-col>
+          <ion-col>3 GB</ion-col>
+          <ion-col>500</ion-col>
+        </ion-row>
+      </ion-grid>
+  
+  </ion-card>
 </ion-content>
